syntax = "proto3";

package api.user.v1;

import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "imperialPalaceMall/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc WxLogin (WxLoginRequest) returns (WxLoginReply);
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc CheckToken (CheckTokenRequest) returns (CheckTokenReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message WxLoginRequest {
	google.protobuf.StringValue code = 1 [(validate.rules).string = {min_len: 5}, (validate.rules).message.required = true];
	google.protobuf.StringValue encrypted_data = 2 [(validate.rules).string = {min_len: 10}, (validate.rules).message.required = true];
	google.protobuf.StringValue iv = 3 [(validate.rules).string = {min_len: 5}, (validate.rules).message.required = true];
	bool session_is_valid = 4;
}

message WxLoginReply {
	string token = 1;
}

message CreateUserRequest {}
message CreateUserReply {}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message CheckTokenRequest {
	google.protobuf.StringValue token = 1 [(validate.rules).string = {len: 26}, (validate.rules).message.required = true];
}
message CheckTokenReply {
	message UserRet {
		int64 user_id = 1;
		string open_id = 2;
	}
	UserRet user = 1;
}

message ListUserRequest {}
message ListUserReply {}